src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>This field denotes whether an individual is a contractor or federal employee.</description>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>The city for the address of a GSA employee&apos;s primary work location.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Region__c</fullName>
        <description>Region based on the state of an employee&apos;s work location. If an employee&apos;s region is Central Office, but the building the employee works in is located in Florida, their physical region would be Region 4.</description>
        <label>Physical Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlackBerry</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>CITRIX</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Google Calendar</fullName>
                </value>
                <value>
                    <fullName>Google Discussion Forum</fullName>
                </value>
                <value>
                    <fullName>Google Docs</fullName>
                </value>
                <value>
                    <fullName>Google Groups</fullName>
                </value>
                <value>
                    <fullName>Google Mail</fullName>
                </value>
                <value>
                    <fullName>GSA Access Card</fullName>
                </value>
                <value>
                    <fullName>IT Outage Calendar</fullName>
                </value>
                <value>
                    <fullName>IT Self Help</fullName>
                </value>
                <value>
                    <fullName>Mobile Devices</fullName>
                </value>
                <value>
                    <fullName>Network Connections</fullName>
                </value>
                <value>
                    <fullName>Passwords</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Software and Hardware</fullName>
                </value>
                <value>
                    <fullName>Telework</fullName>
                </value>
                <value>
                    <fullName>VoIP Phone</fullName>
                </value>
                <value>
                    <fullName>VPN - Virtual Private Network</fullName>
                </value>
                <value>
                    <fullName>VTC - Video Teleconference</fullName>
                </value>
                <value>
                    <fullName>WebEx</fullName>
                </value>
                <value>
                    <fullName>Windows 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The state of the address of a GSA employee&apos;s primary work location.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>The street address of a GSA employee&apos;s primary work location.</description>
        <label>Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I - Office of the Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>ID - Office of the Deputy CIO</fullName>
                </value>
                <value>
                    <fullName>IA - Office of Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>IE - Office of Enterprise Management Services</fullName>
                </value>
                <value>
                    <fullName>IOM - Mobile Workforce Staff</fullName>
                </value>
                <value>
                    <fullName>IO - Office of Enterprise Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IS - Senior Agency Information Security Officer Staff</fullName>
                </value>
                <value>
                    <fullName>IR - Resource Management Staff</fullName>
                </value>
                <value>
                    <fullName>IAT - Training and Usability Division</fullName>
                </value>
                <value>
                    <fullName>IEE - IT Portfolio Management Division</fullName>
                </value>
                <value>
                    <fullName>IOD - Center for Applied Solutions</fullName>
                </value>
                <value>
                    <fullName>IOI - Center for IT Customer Services</fullName>
                </value>
                <value>
                    <fullName>IOW - Center for Network Operations</fullName>
                </value>
                <value>
                    <fullName>IAG - Enterprise Applications Division</fullName>
                </value>
                <value>
                    <fullName>IEC - IT Policy and Compliance Division</fullName>
                </value>
                <value>
                    <fullName>IODM - System Solutions Division</fullName>
                </value>
                <value>
                    <fullName>IAGC - Collaboration Branch</fullName>
                </value>
                <value>
                    <fullName>IEA - Architecture Division</fullName>
                </value>
                <value>
                    <fullName>IODMD - Directory and Access Management Team</fullName>
                </value>
                <value>
                    <fullName>IAGM - Client and Remote Mail Branch</fullName>
                </value>
                <value>
                    <fullName>IODMT - Server Management Team</fullName>
                </value>
                <value>
                    <fullName>ICAM - Identity Credential and Access Management Division</fullName>
                </value>
                <value>
                    <fullName>IODC - Client Solutions Division</fullName>
                </value>
                <value>
                    <fullName>IOWD - Infrastructure Network Division</fullName>
                </value>
                <value>
                    <fullName>IOP - Program Management Division</fullName>
                </value>
                <value>
                    <fullName>IOWS - Voice Technologies Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telework_Flag__c</fullName>
        <label>Telework Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <label>VIP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <description>The building code for a GSA employee&apos;s primary place of work.</description>
        <label>Work Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>